objects/pymt__Category__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>PaymentConnect transaction category object.  Used to classify payments.</description>
    <fields>
        <fullName>pymt__Category_ID__c</fullName>
        <displayFormat>C{0000}</displayFormat>
        <label>Category ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pymt__Description__c</fullName>
        <description>Internal description for this Category.</description>
        <inlineHelpText>Internal description for this Category.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>Nolan_Daigle_Category</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>pymt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>